--- a/video/templates/video/video_detail.html
+++ b/video/templates/video/video_detail.html
@@ -26,107 +26,124 @@
         color: black;
     }
 
-       .half-highlight {
-  background: linear-gradient(180deg,rgba(255,255,255,0) 50%, #FFD0AE 50%);
-}
+    .half-highlight {
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 50%, #FFD0AE 50%);
+    }
+
     .spread-underline {
-  color: #333;
-  text-decoration: none;
-  display: inline-block;
-  padding: 15px 0;
-  position: relative;
-}
-.spread-underline:after {    
-  background: none repeat scroll 0 0 transparent;
-  bottom: 0;
-  content: "";
-  display: block;
-  height: 2px;
-  left: 50%;
-  position: absolute;
-  background: #ffb000;
-  transition: width 0.3s ease 0s, left 0.3s ease 0s;
-  width: 0;
-}
-.spread-underline:hover:after { 
-  width: 100%; 
-  left: 0; 
-}
+        color: #333;
+        text-decoration: none;
+        display: inline-block;
+        padding: 15px 0;
+        position: relative;
+    }
+
+    .spread-underline:after {
+        background: none repeat scroll 0 0 transparent;
+        bottom: 0;
+        content: "";
+        display: block;
+        height: 2px;
+        left: 50%;
+        position: absolute;
+        background: #ffb000;
+        transition: width 0.3s ease 0s, left 0.3s ease 0s;
+        width: 0;
+    }
+
+    .spread-underline:hover:after {
+        width: 100%;
+        left: 0;
+    }
 </style>
 
-	<head>
-		<title>영어 듣기</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="{% static 'css/main.css' %}">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+<head>
+    <title>영어 듣기</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script> 
-        <style type="text/css">        
-        a { text-decoration:none } 
-        </style> 
-	</head>
-    
+        crossorigin="anonymous"></script>
+    <style type="text/css">
+        a {
+            text-decoration: none
+        }
+    </style>
+</head>
+
 <body>
     <div class="fixed-top Handon3gyeopsal600g-font">
-  <div class="collapse" id="navbarToggleExternalContent">
-    <div class="bg-dark p-4" style="color: white;">
-    {%if user.is_authenticated%}
-      <h5 class="text-white h3" >{{user.profile.nickname}}님 반갑습니다!</h5>
-      <span class="text-muted">
-      <form>ㅤ
-                <a href="{%url 'user_profile'%}" style="color: white;">내정보 </a>
-                <a href="{%url 'ranking'%}" style="color: white;">ㅤㅤ현재 순위ㅤ</a>
-                {%csrf_token%}
-                <form action="{%url 'logout'%}" method="POST" >
-                    <input type="submit" value="로그아웃" style="font-size: 0.8rem;">
-                </form>
-                {%else%}
-                <a href="{%url 'signup'%}">회원가입</a>
-                <a href="{%url 'login'%}">로그인</a>
-                {%endif%}
-                </form>
+        <div class="collapse" id="navbarToggleExternalContent">
+            <div class="bg-dark p-4" style="color: white;">
+                {%if user.is_authenticated%}
+                <a href="{%url 'a'%}">
+                    <h5 class="text-white h3">{{user.profile.nickname}}님 반갑습니다!</h5>
+                </a>
+                <span class="text-muted">
+                    <form>ㅤ
+                        <a href="{%url 'user_profile'%}" style="color: white;">내정보 </a>
+                        <a href="{%url 'ranking'%}" style="color: white;">ㅤㅤ현재 순위ㅤ</a>
+                        {%csrf_token%}
+                        <form action="{%url 'logout'%}" method="POST">
+                            <input type="submit" value="로그아웃" style="font-size: 0.8rem;">
+                        </form>
+                        {%else%}
+                        <a href="{%url 'signup'%}">회원가입</a>
+                        <a href="{%url 'login'%}">로그인</a>
+                        {%endif%}
+                    </form>
                 </span>
+            </div>
+        </div>
+        <nav class="navbar navbar-dark bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="nav-link spread-underline" href="{%url 'voca_cate'%}"
+                style="color:black; font-size:1.1rem;">단어장</a>
+            <a class="nav-link spread-underline" href="{%url 'voca_test'%}"
+                style="color:black; font-size:1.1rem;">단어테스트</a>
+            <a class="nav-link spread-underline" href="{%url 'listen'%}" style="color:black; font-size:1.1rem;">영어듣기</a>
+            <a class="nav-link spread-underline" href="{%url 'pronounce'%}"
+                style="color:black; font-size:1.1rem;">발음연습</a>
+            <a class="nav-link spread-underline" href="{%url 'chatbot'%}" style="color:black; font-size:1.1rem;">챗봇</a>
+            <a class="nav-link spread-underline" href="{%url 'write'%}" style="color:black; font-size:1.1rem;">손글씨
+                쓰기</a>
+            <a class="nav-link spread-underline" href="{%url 'todo:todolist'%}"
+                style="color:black; font-size:1.1rem;">투두리스트</a>
+        </nav>
     </div>
-  </div>
-  <nav class="navbar navbar-dark bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="nav-link spread-underline" href="{%url 'voca_cate'%}" style="color:black; font-size:1.1rem;">단어장</a>
-    <a class="nav-link spread-underline" href="{%url 'voca_test'%}" style="color:black; font-size:1.1rem;">단어테스트</a>
-    <a class="nav-link spread-underline" href="{%url 'listen'%}" style="color:black; font-size:1.1rem;">영어듣기</a>
-    <a class="nav-link spread-underline" href="{%url 'pronounce'%}" style="color:black; font-size:1.1rem;">발음연습</a>
-    <a class="nav-link spread-underline" href="{%url 'chatbot'%}" style="color:black; font-size:1.1rem;">챗봇</a>
-    <a class="nav-link spread-underline" href="{%url 'write'%}" style="color:black; font-size:1.1rem;">손글씨 쓰기</a>
-    <a class="nav-link spread-underline" href="{%url 'todo:todolist'%}" style="color:black; font-size:1.1rem;">투두리스트</a>
-  </nav>
-</div>
-        
-        <!-- Three -->
-			<section id="three" class="wrapper">
-                <center>
-                <div class="content container">
-                    <header class="page-header" style="overflow: auto;">
-                    <br>
-                        <center><h4 class="Handon3gyeopsal600g-font" style="display: inline; font-size: 2.0rem">{{ video.title }}</h4></center>
-                        <!-- <a class="btn btn-default" href="/listen/new" style="float: right;">New Video</a> -->
-                    </header>
-                    <div class="row">
-                        <div class="col-md-16">
-                            <!-- <h4 class="ghanachoco-font">{{ video.title }}</h4> -->
-                            <div id="player" style="width: 1110px; height: 600px;"></div>
-                        </div>
-                    </div>
 
+    <!-- Three -->
+    <section id="three" class="wrapper">
+        <center>
+            <div class="content container">
+                <header class="page-header" style="overflow: auto;">
+                    <br>
+                    <center>
+                        <h4 class="Handon3gyeopsal600g-font" style="display: inline; font-size: 2.0rem">
+                            {{ video.title }}</h4>
+                    </center>
+                    <!-- <a class="btn btn-default" href="/listen/new" style="float: right;">New Video</a> -->
+                </header>
+                <div class="row">
+                    <div class="col-md-16">
+                        <!-- <h4 class="ghanachoco-font">{{ video.title }}</h4> -->
+                        <div id="player" style="width: 1110px; height: 600px;"></div>
+                    </div>
                 </div>
-            </center>
-			</section>
+
+            </div>
+        </center>
+    </section>
 
 
     <!-- Footer -->
@@ -145,25 +162,26 @@
         </div>
     </footer>
 
-		<!-- Scripts -->
-			<script src="/static/js/jquery.min.js"></script>
-			<script src="/static/js/skel.min.js"></script>
-			<script src="/static/js/util.js"></script>
-			<script src="/static/js/main.js"></script>
+    <!-- Scripts -->
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/skel.min.js"></script>
+    <script src="/static/js/util.js"></script>
+    <script src="/static/js/main.js"></script>
 
-    </body>
-    <script>
-        var tag = document.createElement('script');
-    
-        tag.src = "https://www.youtube.com/iframe_api";
-        var firstScriptTag = document.getElementsByTagName('script')[0];
-        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-    
-        var player;
-        function onYouTubeIframeAPIReady() {
-            player = new YT.Player('player', {
-                videoId: '{{ video.video_key }}'
-            });
-        }
-    </script>
+</body>
+<script>
+    var tag = document.createElement('script');
+
+    tag.src = "https://www.youtube.com/iframe_api";
+    var firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+    var player;
+    function onYouTubeIframeAPIReady() {
+        player = new YT.Player('player', {
+            videoId: '{{ video.video_key }}'
+        });
+    }
+</script>
+
 </html>
