--- a/app/templates/test_result.html
+++ b/app/templates/test_result.html
@@ -1,6 +1,5 @@
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <style>
     @font-face {
         font-family: 'ghanachoco';
@@ -52,7 +51,7 @@
         left: 0;
     }
 
-    .mosh-btn {
+    /* .mosh-btn {
         background-color: #4a7aec;
         min-width: 150px;
         height: 54px;
@@ -66,19 +65,13 @@
         -webkit-transition-duration: 500ms;
         transition-duration: 500ms;
         margin-top: 50px;
-    }
+    } */
 </style>
 
 <head>
-    <meta charset="UTF-8">
+    <title>테스트 결과</title>
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-    <!-- Title -->
-    <title>Mosh - Creative Business Template | About</title>
-
     <!-- Favicon -->
     <link rel="icon" href="../static/img/core-img/favicon.ico">
 
@@ -88,25 +81,22 @@
     <!-- Responsive CSS -->
     <link href="../static/css/responsive.css" rel="stylesheet">
 
-    <head>
-        <title>머핀의 법칙 - AI 기반 영어 교육</title>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-            crossorigin="anonymous"></script>
-        <style type="text/css">
-            a {
-                text-decoration: none
-            }
-        </style>
-    </head>
-
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <style type="text/css">
+        a {
+            text-decoration: none
+        }
+    </style>
 </head>
 
 <body>
@@ -167,7 +157,7 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="bradcumbContent">
-                        <h2>Result</h2>
+                        <h2 class="Handon3gyeopsal600g-font">{{flag}}</h2>
 
                     </div>
                 </div>
@@ -183,13 +173,12 @@
                 <div class="col-12 col-md-6">
                     <div class="mosh-about-us-content">
                         <div class="section-heading">
-
-                            <h5 class="Handon3gyeopsal600g-font">{{flag}}</h5>
                             {%if mean%}
-                            <h3 class="Handon3gyeopsal600g-font">정답: {{mean}}</h3>
+                            <h2 class="Handon3gyeopsal600g-font">정답: {{mean}}</h2>
                             {%endif%}
-                            <form action="{%url 'voca_test'%}">
-                                <button class="Handon3gyeopsal600g-font" style="   
+                            <div>
+                                <form action="{%url 'voca_test'%}">
+                                    <button class="Handon3gyeopsal600g-font" style="   
                                 background-color: #4a7aec;
                                 min-width: 150px;
                                 height: 54px;
@@ -203,10 +192,10 @@
                                 -webkit-transition-duration: 500ms;
                                 transition-duration: 500ms;
                                 margin-top: 50px;">다음 단어로</button>
-                            </form>
+                                </form>
 
-                            <form action="{%url 'a'%}">
-                                <button class="Handon3gyeopsal600g-font" style="   
+                                <form action="{%url 'a'%}">
+                                    <button class="Handon3gyeopsal600g-font" style="   
                                 background-color: #4a7aec;
                                 min-width: 150px;
                                 height: 54px;
@@ -219,7 +208,9 @@
                                 text-transform: uppercase;
                                 -webkit-transition-duration: 500ms;
                                 transition-duration: 500ms;
-                                margin-top: 50px;">단어테스트 마치기</button>
+                                margin-top: 5px;">단어테스트 마치기</button>
+                                </form>
+                            </div>
                         </div>
                     </div>
 
@@ -228,115 +219,18 @@
     </section>
     <!-- ***** About Us Area End ***** -->
 
-
-
     <!-- ***** Footer Area Start ***** -->
-    <footer class="footer-area clearfix">
-        <!-- Top Fotter Area -->
-        <div class="top-footer-area section_padding_100_0">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-sm-6 col-lg-3">
-                        <div class="single-footer-widget mb-100">
-                            <a href="#" class="mb-50 d-block"><img src="../static/img/core-img/logo.png" alt=""></a>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellent esque sit amet tellus
-                                blandit. Etiam nec odio vestibul.</p>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-3">
-                        <div class="single-footer-widget mb-100">
-                            <h5>Fast links</h5>
-                            <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Testimonials</a></li>
-                                <li><a href="#">Services &amp; Features</a></li>
-                                <li><a href="#">Accordions and tabs</a></li>
-                                <li><a href="#">Menu ideas</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-3">
-                        <div class="single-footer-widget mb-100">
-                            <h5>Blog</h5>
-                            <div class="footer-single--blog-post">
-                                <a href="#" class="blog-post-date">
-                                    <p>23 September, 2017</p>
-                                </a>
-                                <a href="#" class="blog-post-title">
-                                    <h6>Why we love stock photos</h6>
-                                </a>
-                            </div>
-                            <div class="footer-single--blog-post">
-                                <a href="#" class="blog-post-date">
-                                    <p>22 September, 2017</p>
-                                </a>
-                                <a href="#" class="blog-post-title">
-                                    <h6>Designin on grid. A few rules. </h6>
-                                </a>
-                            </div>
-                            <div class="footer-single--blog-post">
-                                <a href="#" class="blog-post-date">
-                                    <p>20 September, 2017</p>
-                                </a>
-                                <a href="#" class="blog-post-title">
-                                    <h6>2017 World Design Congress</h6>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-3">
-                        <div class="single-footer-widget mb-100">
-                            <h5>Contact Info</h5>
-                            <div class="footer-single-contact-info d-flex">
-                                <div class="contact-icon">
-                                    <img src="../static/img/core-img/map.png" alt="">
-                                </div>
-                                <p>4127/ 5B-C Mislane Road, Gibraltar, UK</p>
-                            </div>
-                            <div class="footer-single-contact-info d-flex">
-                                <div class="contact-icon">
-                                    <img src="../static/img/core-img/call.png" alt="">
-                                </div>
-                                <p>Main: 203-808-8613 <br> Office: 203-808-8648</p>
-                            </div>
-                            <div class="footer-single-contact-info d-flex">
-                                <div class="contact-icon">
-                                    <img src="../static/img/core-img/message.png" alt="">
-                                </div>
-                                <p>office@yourbusiness.com</p>
-                            </div>
-                        </div>
-                    </div>
+    <footer id="footer">
+        <div class="inner">
+            <div class="flex">
+                <div class="copyright">
+                    &copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a
+                        href="https://unsplash.com">Unsplash</a>.
                 </div>
-            </div>
-        </div>
-        <!-- Fotter Bottom Area -->
-        <div class="footer-bottom-area">
-            <div class="container h-100">
-                <div class="row h-100">
-                    <div class="col-12 h-100">
-                        <div class="footer-bottom-content h-100 d-md-flex justify-content-between align-items-center">
-                            <div class="copyright-text">
-                                <p>
-                                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                    Copyright &copy;
-                                    <script>document.write(new Date().getFullYear());</script> All rights reserved |
-                                    This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
-                                        href="https://colorlib.com" target="_blank">Colorlib</a>
-                                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                </p>
-                            </div>
-                            <div class="footer-social-info">
-                                <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-                                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                                <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-                                <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-                                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <ul class="icons">
+                    <li> <a href="http://cse.yu.ac.kr/main.php"><img src="{% static 'img/yu.png' %}" width="200px;"></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </footer>
