--- a/chatbot/templates/base.html
+++ b/chatbot/templates/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-<!DOCTYPE html>
 <html>
 
 <style>
@@ -59,13 +58,14 @@
 </style>
 
 <head>
-	<title>머핀의 법칙 - AI 기반 영어 교육</title>
+	<title>챗봇</title>
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+	<link rel="stylesheet" href="{% static 'css/main.css' %}">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
 		integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
@@ -76,7 +76,6 @@
 		integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 		crossorigin="anonymous"></script>
 	<script type="text/javascript" src="/static/js/dev-vue.js"></script>
-
 	{% block css %} {% endblock %}
 
 	{% block js %}{% endblock %}
